--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://adirbuskila.github.io/ATP-Stats",
+  "homepage": "http://adirbuskila.github.io/atp-world-tour",
   "name": "atp-world-tour",
   "version": "0.1.0",
   "private": true,
